# fastapi-ariadne-example

./: LICENSE  README.md
ariadne_example/: .flake8  Dockerfile  README.md  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml
ariadne_example/alembic/: env.py
ariadne_example/alembic/versions/: 23799b5136c5_init_db.py
ariadne_example/app/: main.py  models.py  schema.graphql
ariadne_example/app/api/: routes.py  subscriptions.py
ariadne_example/app/api/mutations/: __init__.py  task.py
ariadne_example/app/api/queries/: __init__.py  task.py
ariadne_example/app/core/: config.py  exceptions.py  middlewares.py  struсtures.py
ariadne_example/app/db/: session.py
graphene_example/: .env.example  Dockerfile  pyproject.toml
graphene_example/app/: main.py  models.py
graphene_example/app/api/: routes.py  subscriptions.py
graphene_example/app/api/mutations/: __init__.py  task.py
graphene_example/app/api/queries/: task.py
graphene_example/app/core/: config.py  exceptions.py  structures.py
graphene_example/app/db/: session.py
