[tool.poetry]
name = "fastapi-ariadne-example"
version = "0.0.1"
description = "Пример интеграции FastAPI с Ariadne"
authors = ["Danil Maximov <bazinga.mail@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.4"
ariadne = "^0.13.0"
alembic = "^1.7.4"
fastapi = "0.68"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.2"
graphql-relay = "^3.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
